--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -232,6 +232,18 @@
   version = {0.1.55}
 }
 
+@book{bronstein1995taschenbuch,
+  title = {Taschenbuch der Mathematik: Ergänzende Kapitel},
+  author = {Bronstein, Ilja Nikolajewitsch and Semendjajew, Konstantin Adolfowitsch},
+  date = {1995},
+  edition = {7},
+  publisher = {{Teubner}},
+  location = {{Leipzig}},
+  isbn = {3-322-00782-0},
+  keywords = {functional analysis,information theory,integral equations,measure theory},
+  langid = {german}
+}
+
 @online{carpenter2015stan,
   title = {The {{Stan Math Library}}: {{Reverse}}-{{Mode Automatic Differentiation}} in {{C}}++},
   shorttitle = {The {{Stan Math Library}}},
